Integrated Joramm's revisions